# micrograd_cpp

./: .gitignore  CMakeLists.txt  README.md
include/micrograd_cpp/: nn.cpp  variable.cpp
tests/: CMakeLists.txt  nn_test.cpp  variable_test.cpp
